apps/staging/echo-mirror/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: echo
  name: echo
spec:
  selector:
    matchLabels:
      app: echo
  replicas: 1
  template:
    metadata:
      labels:
        app: echo
    spec:
      containers:
      - image: ghcr.io/huangyingting/echo:0.0.2 # {"$imagepolicy": "flux-system:echo"}
        imagePullPolicy: Always
        name: echo
        ports:
        - containerPort: 8080
