apps/staging/echo-mirror/ingress.enc.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    annotations:
        cert-manager.io/cluster-issuer: letsencrypt
        nginx.ingress.kubernetes.io/enable-modsecurity: "true"
        nginx.ingress.kubernetes.io/enable-owasp-core-rules: "true"
    name: echo
spec:
    ingressClassName: nginx
    rules:
        - host: ENC[AES256_GCM,data:gbaDl9csTuWdMmYH0djyTfsIOxhtFSSve1ZS,iv:hHBVSHmpbDmVhQ5bjTTnI37Mja7JxwG6KtlP+6B8oxk=,tag:U1I9mbjj+nsFl02XTZ1xFg==,type:str]
          http:
            paths:
                - backend:
                    service:
                        name: echo
                        port:
                            number: 80
                  path: /
                  pathType: ImplementationSpecific
    tls:
        - hosts:
            - ENC[AES256_GCM,data:zBxEcU1RymDVwQ0xKiJLee4KlPsFJSVnkflK,iv:FKGzXEQTBmRih2xRmS1DeT2OQ4/acXjI9fdavX1neag=,tag:0PzmEXfw5GY9iBFrk3189Q==,type:str]
          secretName: echo-mirror-tls
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age: []
    lastmodified: "2022-12-07T02:25:44Z"
    mac: ENC[AES256_GCM,data:fBt1+V3ItCZhFVY2nfpQKAkbJhvbMZbi1TCbrT93fJqCh9CSaBvNDaQ/dW4P+B0G9P59ghwXtrXSN31wb33+5Rzm2ZZH4CgjdrpX2E2cmZ4gRnOUpk74tK3OimE1LRHBrQwzCXY4CjHT78NMVdZwV3iMkSSP71C11htGVx21Fu4=,iv:9Q4gI6nUoxYXl2lQHIHBoJPZGpe/ONIBtv3odWH1mZw=,tag:VaADhyBID9jHpMihys7Otg==,type:str]
    pgp:
        - created_at: "2022-12-07T02:25:43Z"
          enc: |
            -----BEGIN PGP MESSAGE-----

            hQIMA38T7Az157GMAQ/+OLwINnf/s9qUtykxjO33Q1TcXkGIxBjQhuo3a6byxJbP
[...]
            =wVly
            -----END PGP MESSAGE-----
          fp: 129994A38E40322EE2A4FA6CB59C51DA13B1BF22
    encrypted_regex: ^(host|hosts)$
    version: 3.7.3
